--- a/p8105_hw5_yl5219.md
+++ b/p8105_hw5_yl5219.md
@@ -389,11 +389,11 @@ hypothesis rejection indicators.
 
 ``` r
 set.seed(123) # For reproducibility
-n = 30 # Sample size
-sigma = 5 # Standard deviation
-mu_values = 0:6 # True mean values
-alpha = 0.05 # Significance level
-num_simulations = 5000 # Number of simulations
+n = 30 # Sample size, fix n = 30
+sigma = 5 # Standard deviation, fix sigma = 5
+mu_values = 0:6 # True mean values, repeat the same process for mu values from 0 to 6
+alpha = 0.05 # Significance level, fix alpha = 0.05
+num_simulations = 5000 # Number of simulations, fix number of simulations = 5000
 
 simulation_results = map_dfr(mu_values, function(mu) {
   tibble(
